# repsheet

./: .gitignore  .travis.yml  Makefile.am  README.md  Rakefile  configure.ac
debian/: changelog
nginx/: README.md  config  nginx.conf  ngx_http_repsheet_module.c
rpmbuild/SOURCES/: 00_mod_repsheet.conf
rpmbuild/SPECS/: mod_repsheet.spec
script/: apache.sh  apache_bootstrap  apache_compile  bootstrap  clean  geoip.sh  modsecurity.sh  nginx.sh  nginx_bootstrap  nginx_compile  repsheet.sh
script/apache/: modsecurity.sh  repsheet.sh
spec/integration/: integration_spec.rb
src/: Makefile.am  mod_repsheet.c  mod_repsheet.h  mod_security.c  mod_security.h  repsheet.c  repsheet.h
test/: Makefile.am  mod_security_test.c  repsheet_test.c
